<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Task App</string>
    <string name="email">Email:</string>
    <string name="password">Password:</string>
    <string name="login">Log in</string>
    <string name="signup">Don\'t have account? Sign up here</string>
    <string name="add_new_note">add new note</string>
    <string name="registration">Registration</string>
    <string name="already_have_account_login_here">Already have account? Login here</string>
    <string name="_9_september">9 September</string>
    <string name="medium">medium</string>
    <string name="title">Title</string>
    <string name="note">Note</string>
    <string name="edit_task">Edit task</string>
    <string name="title_in">Title:</string>
    <string name="note_in">Note:</string>
    <string name="urgency_in">Urgency:</string>
    <string name="low">low</string>
    <string name="high">high</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="add_new_task">Add new task</string>
    <string name="save">Save</string>

</resources>