<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app = "http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardElevation="10dp"
    android:elevation="10dp"
    android:orientation="horizontal"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false"
        android:background="@drawable/item_background"
        >

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_9_september"
                android:maxLines="1"
                android:padding="7dp"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="#6C1DFD"
                android:id="@+id/date"
            />

            <TextView
                android:id="@+id/urgency_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/date"
                android:maxLines="1"
                android:padding="7dp"
                android:text="@string/medium"
                android:textStyle="bold"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@android:color/black" />

        </RelativeLayout>


        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/item_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:padding="5dp"
                android:text="@string/title"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/item_note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/item_title"
                android:maxLines="2"
                android:padding="10dp"
                android:text="@string/note"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@android:color/black" />

        </RelativeLayout>




    </LinearLayout>
</androidx.cardview.widget.CardView>